CSS Fixed All Major Layout Issues | changes images to better fit boxes

--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+html {
+    width: 100%;
+    height: 100%;
+}
 body {
     margin: 0;
     padding: 0;
     font-family: 'Heebo', sans-serif;
     background-color: rgb(216,182,155);
     box-sizing: border-box;
+    width: 100%;
     height: 100%;
 }
 .main-page-container {
@@ -17,7 +22,7 @@ body {
     align-items: center;
     position: fixed;
     flex-direction: row;
-    border-bottom: 1px solid rgb(213, 157, 107);
+    border-bottom: 0.083em solid rgb(213, 157, 107);
     background-color: rgb(208, 137, 98);
     width: 100%;
     height: 10%;
@@ -40,8 +45,8 @@ body {
 .top-header-right .header-right-button {
     background-color: rgb(119, 61, 49);
     cursor: pointer;
-    font-size: 14px;
-    border-radius: 12px;
+    font-size: .8753em;
+    border-radius: .75em;
 }
 
 .top-header-left {
@@ -75,7 +80,7 @@ ul {
 .main-picture {
     width: 100%;
     position: relative;
-    border-bottom: 1px solid rgb(213, 157, 107);
+    border-bottom: 0.083em solid rgb(213, 157, 107);
 }
 .main-picture img {
     display: flex;
@@ -89,7 +94,7 @@ ul {
     position: absolute;
     background-color: rgb(119, 61, 49, .9);
     top: 84%;
-    left: 11%;
+    left: 2%;
     z-index: 10;
 }
 
@@ -113,12 +118,12 @@ ul {
     position: absolute;
     opacity: 0;
     top: 0;
-    right: -20px;
+    right: -1.667em;
     transition: 0.5s;
 }
   
 .main-picture-button button:hover span {
-    padding-right: 25px;
+    padding-right: 2.083em;
 }
   
 .main-picture-button button:hover span:after {
@@ -132,9 +137,9 @@ ul {
     justify-content: center;
     align-items: center;
     background-color: rgb(208, 137, 98);
-    border-bottom: 1px solid rgb(213, 157, 107);
+    border-bottom: 0.083em solid rgb(213, 157, 107);
     width: 100%;
-    height: 20%;
+    height: 10%;
 }
 .main-page-grid {
     display: flex;
@@ -142,6 +147,7 @@ ul {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    height: 60%;
     width: 100%;
 }
 .main-page-side-grid {
@@ -149,13 +155,16 @@ ul {
     position: relative;
     flex-direction: row;
     width: 40%;
-    border: 1px solid rgb(211,211,211);
+    height: 80%;
+    border: 0.083em solid rgb(211,211,211);
 }
 
 .main-page-side-grid .side-grid-text{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    height: 100%;
     flex: 1;
 }
 
@@ -172,17 +181,18 @@ ul {
 }
 .main-page-side-grid .side-grid-img img {
     max-width: 100%;
-    min-height: 100%;
+    max-height: 100%;
 }
 
 .main-page-dog-advertisment {
     width: 100%;
+    height: 100%;
     position: relative;
-    border-bottom: 1px solid rgb(213, 157, 107);
+    border-bottom: 0.083em solid rgb(213, 157, 107);
 }
 .main-page-dog-advertisment img { 
     width: 100%;
-    height: 80%;
+    height: 100%;
     z-index: 5
 }
 .advertisment-button {
@@ -201,36 +211,40 @@ ul {
     flex-direction: column;
     align-items: center;
     width: 40%;
-    height: 60%;
-    border: 1px solid rgb(211,211,211);
+    height: 80%;
+    border: 0.083em solid rgb(211,211,211);
 }
 .main-page-top-grid .top-grid-img {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    height: 100%;
+    width: 100%;
     flex: 1;
 }
 .main-page-top-grid .top-grid-img img {
-    max-width: 100%;
-    min-height: 100%;
+    max-height: 100%;
+    min-width: 100%;
+    
 }
 .main-page-top-grid .top-grid-text {
     display: flex;
     flex-direction: column;
     flex: 1;
 }
-
+.main-page-top-grid .top-grid-text h2 {
+    align-self: center;
+}
 .main-page-adopt-a-dog {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     background-color: rgb(208, 137, 98);
-    border-bottom: 1px solid rgb(213, 157, 107);
+    border-bottom: 0.083em solid rgb(213, 157, 107);
     width: 100%;
-    height: 40%;
-
+    height: 10%;
 }
 footer {
     display: flex;
@@ -238,7 +252,9 @@ footer {
     justify-content: space-around;
     align-items: center;
     background-color: rgb(119, 61, 49);
-    border-bottom: 1px solid rgb(213, 157, 107);
+    border-bottom: 0.083em solid rgb(213, 157, 107);
+    width: 100%;
+    height: 25%;
 }
 footer .footer-social-media {
     display: flex;
